# typer-pydantic-config

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  release-please.yaml
src/: annotation_to_click_type.py  config_app.py  config_base.py  example.py
src/examples/: custom_init.py  example.py  minimal.py
src/tests/: test_get_nested_fields.py  test_get_simple_default.py
src/tests/__snapshots__/: test_dict_utils.ambr  test_get_nested_fields.ambr
src/typer_pydantic_config/: __init__.py  click_utils.py  config_app.py  context.py  pydantic_writer.py
src/typer_pydantic_config/tests/: test_dict_utils.py
