[project]
name = "upload-audiobooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "toml>=0.10.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "pre-commit>=4.1.0",
]

[tool.ruff.lint]
preview=true
extend-select=[
    "A",      #flake8-builtins
    "AIR",    #Airflow
    "ANN",    #flake8-annotations
    "ARG",    #flake8-unused-arguments
    "ASYNC",  #flake8-async
    "B",      #flake8-bugbear
    "BLE",    #flake8-blind-except
    "C4",     #flake8-comprehensions
#    "C90",    #mccabe
#    "COM",    #flake8-commas
#    "CPY",    #flake8-copyright
    "D",      #pydocstyle
    "DOC",
    "DJ",     #flake8-django
#    "DOC",     #pydoclint
#    "DTZ",    #flake8-datetimez
    "E",
    "EM",     #flake8-errmsg
    "ERA",    #eradicate
#    "EXE",    #flake8-executable
    "F",      #Pyflakes
    "FA",     #flake8-future-annotations
    "FAST",      # FastAPI
#    "FBT",    #flake8-boolean-trap
#    "FIX",    #flake8-fixme
    "FLY",    # flynt
    "FLY",    #flynt
    "FURB",   #refurb
#    "G",      #flake8-logging-format
    "I",      #isort
    "ICN",    #flake8-import-conventions
    "INP",    #flake8-no-pep420
    "INT",    #flake8-gettext
    "ISC",    #flake8-implicit-str-concat
    "LOG",    #flake8-logging
    "N",      #pep8-naming
    "NPY",    #NumPy-specific rules
    "PD",     #pandas-vet
    "PERF",   #Perflint
    "PGH",    #pygrep-hooks
    "PIE",    #flake8-pie
    "PL",     #Pylint
    "PT",     #flake8-pytest-style
    "PTH",    #flake8-use-pathlib
#    "PYI",    #flake8-pyi
    "Q",      #flake8-quotes
    "RET",    #flake8-return
    "RSE",    #flake8-raise
    "RUF",    #Ruff-specific rules
#    "S",      #flake8-bandit
    "SIM",    #flake8-simplify
    "SLF",    #flake8-self
#    "SLOT",   #flake8-slots
#    "T10",    #flake8-debugger
#    "T20",    #flake8-print
    "TCH",    #flake8-type-checking
    "TD",     #flake8-todos
    "TID",    #flake8-tidy-imports
    "TRY",    #tryceratops
    "UP",     #pyupgrade
    "W",      #pycodestyle
#    "YTT",    #flake8-2020
]

ignore = [
    "ANN401",       # Using Any-type should be allowed
    "ISC001",       # Incompatible with formatter
    "D100",         # Module Structure of Django is more or less self-explanatory.
    "D105",         # No docstrings for magic methods necessary.
    "D107",         # No docstrings for __init__ methods necessary.
    "D",
    "DOC201",       # No mandatory Returns section in docstrings.
    "TD003",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100
max-doc-length = 100

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"
